# Simulator

.github/workflows/: notify-discord.yml
lane_keeping/: coss_drive.py  coss_laneTracker.py  gradients.py  line.py  perspective.py  tracker.py  window.py
purepursuit_ws/: README.md
purepursuit_ws/src/control/: package.xml
purepursuit_ws/src/control/launch/: control.launch
purepursuit_ws/src/control/scripts/: control.py  pure_pursuit.py
purepursuit_ws/src/node_to_path/: CMakeLists.txt  package.xml
purepursuit_ws/src/node_to_path/config/: global_path_key_nodes.yaml
purepursuit_ws/src/node_to_path/launch/: node_to_path.launch
purepursuit_ws/src/node_to_path/msg/: DottedPose.msg  PathWithDotted.msg
purepursuit_ws/src/node_to_path/scripts/: graphml_to_path_node.py
purepursuit_ws/src/odometry/: CMakeLists.txt  package.xml
purepursuit_ws/src/odometry/scripts/: imuodom.cpp
purepursuit_ws/src/pure_pursuit/: package.xml
purepursuit_ws/src/pure_pursuit/launch/: pure_pursuit.launch
purepursuit_ws/src/pure_pursuit/scripts/: pure_pursuit.py
test_env/: README.md
test_env/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
test_env/devel/lib/pkgconfig/: bno055_plugin.pc  car_plugin.pc  example.pc  gps_plugin.pc  traffic_light_pkg.pc  traffic_light_plugin.pc  utils.pc
test_env/src/bfmc_localization/: CMakeLists.txt  package.xml
test_env/src/bfmc_localization/config/: ekf_localization.yaml
test_env/src/bfmc_localization/launch/: bfmc_localization.launch
test_env/src/example/src/: RcBrainThread.py  camera.py  control.py
test_env/src/models_pkg/rcCar_assembly/: model.sdf  model.urdf
test_env/src/models_pkg/rcCar_realSense_assembly/: model.sdf
test_env/src/models_pkg/realsense/: model.config  model.sdf
test_env/src/models_pkg/realsense_prev/: model.config
test_env/src/models_pkg/track/: model.sdf
test_env/src/plugins_pkgs/bno055_plugin/: CMakeLists.txt  package.xml
test_env/src/plugins_pkgs/car_plugin/: CMakeLists.txt
test_env/src/plugins_pkgs/gps_plugin/: CMakeLists.txt
test_env/src/plugins_pkgs/pedestrian_object_plugin/: CMakeLists.txt
test_env/src/plugins_pkgs/traffic_light_plugin/: CMakeLists.txt
test_env/src/sim_pkg/launch/: bfmc.launch  map_with_all_realsense.launch  pure_pursuit_mode.launch
(+33 files in other folders)
